syntax = "proto3";

package graft.proto;

option go_package = "github.com/eleven-am/graft/proto/gen";

import "common.proto";

service ClusterService {
  rpc JoinCluster(JoinClusterRequest) returns (JoinClusterResponse);
  rpc LeaveCluster(LeaveClusterRequest) returns (LeaveClusterResponse);
  rpc GetLeader(Empty) returns (GetLeaderResponse);
}

message JoinClusterRequest {
  NodeInfo node = 1;
}

message JoinClusterResponse {
  Status status = 1;
  NodeInfo leader = 2;
  repeated NodeInfo cluster_nodes = 3;
}

message LeaveClusterRequest {
  string node_id = 1;
}

message LeaveClusterResponse {
  Status status = 1;
}

message GetLeaderResponse {
  Status status = 1;
  NodeInfo leader = 2;
}